[gd_scene load_steps=12 format=3 uid="uid://cuee83juxm348"]

[ext_resource type="Script" uid="uid://cgld8mbkrexlm" path="res://Scene/main_menu.gd" id="1_ftydy"]
[ext_resource type="Texture2D" uid="uid://bc2qwgu5qput0" path="res://UI/game_over_screen/Big_Portal_Background.png" id="2_hptlk"]
[ext_resource type="PackedScene" uid="uid://d0tyxnxm1rgmu" path="res://Particles/crashExplosion.tscn" id="2_kqsxi"]
[ext_resource type="PackedScene" uid="uid://cvei22r1caivk" path="res://UI/options/options.tscn" id="2_pvidh"]
[ext_resource type="PackedScene" uid="uid://bum3q5felcu51" path="res://UI/highscores/highscores.tscn" id="2_yok32"]
[ext_resource type="PackedScene" uid="uid://e83m3of2xe73" path="res://Particles/past_portal_explosion.tscn" id="3_pvidh"]
[ext_resource type="PackedScene" uid="uid://buygbq57qa0ek" path="res://Particles/portal_explosion.tscn" id="4_hptlk"]
[ext_resource type="Texture2D" uid="uid://cqdvva3sgsqn2" path="res://Objects/Looper/PastLooper.png" id="6_ejkra"]
[ext_resource type="Texture2D" uid="uid://ck73xutpat0y4" path="res://Scene/Title.png" id="7_oqads"]
[ext_resource type="Texture2D" uid="uid://dk3dn6j2i7tn3" path="res://Objects/Looper/NewLooper.png" id="8_s2f1d"]

[sub_resource type="Theme" id="Theme_ftydy"]
default_font_size = 32

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ftydy")

[node name="crashExplosion" parent="." instance=ExtResource("2_kqsxi")]
z_index = 0

[node name="PastPortalExplosion" parent="." instance=ExtResource("3_pvidh")]
z_index = 0

[node name="PortalExplosion" parent="." instance=ExtResource("4_hptlk")]
z_index = 0

[node name="PortalBackground" type="Sprite2D" parent="."]
position = Vector2(320, 350)
texture = ExtResource("2_hptlk")

[node name="MainMenuDecorations" type="Node2D" parent="."]

[node name="PastLooper" type="Sprite2D" parent="MainMenuDecorations"]
position = Vector2(130, 447)
rotation = 0.785397
scale = Vector2(2, 2)
texture = ExtResource("6_ejkra")

[node name="NewLooper" type="Sprite2D" parent="MainMenuDecorations"]
position = Vector2(505, 444)
rotation = -0.785397
scale = Vector2(2, 2)
texture = ExtResource("8_s2f1d")

[node name="Title" type="Sprite2D" parent="MainMenuDecorations"]
position = Vector2(320, 129)
texture = ExtResource("7_oqads")

[node name="Options" parent="." instance=ExtResource("2_pvidh")]
visible = false

[node name="Highscores" parent="." instance=ExtResource("2_yok32")]
visible = false

[node name="MainMenuButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -55.0
offset_right = 65.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ftydy")

[node name="Play" type="Button" parent="MainMenuButtons"]
layout_mode = 2
text = "Play"

[node name="HighScores" type="Button" parent="MainMenuButtons"]
layout_mode = 2
text = "Highscores"

[node name="Options" type="Button" parent="MainMenuButtons"]
layout_mode = 2
text = "Options"

[connection signal="closeOption" from="Options" to="." method="_on_options_close_option"]
[connection signal="back" from="Highscores" to="." method="_on_highscores_back"]
[connection signal="pressed" from="MainMenuButtons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MainMenuButtons/HighScores" to="." method="_on_high_scores_pressed"]
[connection signal="pressed" from="MainMenuButtons/Options" to="." method="_on_options_pressed"]
